# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  decoder.c  decoder.cpp  display.c  executor.c  fetcher.c  loader.c  main.c  main.h
